samples/_failures_safe/1761481272_b7d573_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_862d2d2a.c: In function ‘read_operator’:
./samples/SAFE/__tmp_862d2d2a.c:149:16: error: expected ‘;’ at end of input
  149 |     token->line
      |                ^
      |                ;
./samples/SAFE/__tmp_862d2d2a.c:149:5: error: expected declaration or statement at end of input
  149 |     token->line
      |     ^~~~~
